<resources>
    <string name="app_logo">Combo Analyzer</string>
    <string name="app_name">Combo</string>
    <string name="pact_pw">88888888</string>
    <string name="pact_ssid_name1">CA</string>
    <string name="pact_ssid_name2">DS</string>
    <string name="ip_address">192.168.10.1</string>
    <string name="mod5g_name">5G/LTE</string>
    <string name="vswr_name">VSWR</string>
    <string name="dtf_name">DTF</string>
    <string name="sa_name">SA</string>
    <string name="sg_name">SG</string>
    <string name="cableloss_name">Cable Loss</string>
    <string name="vswr_mode_name">VSWR</string>
    <string name="rl_mode_name">RL_</string>
    <string name="dtf_vswr_mode_name">DTF_VSWR</string>
    <string name="dtf_rl_mode_name">DTF_RL</string>
    <string name="cl_mode_name">CL</string>
    <string name="sa_mode_name">SA</string>
    <string name="return_loss">RL</string>
    <string name="measurement_name">Measurement</string>
    <string name="frequency_name">Frequency</string>
    <string name="distance_name">Distance</string>
    <string name="amplitude_name">Amplitude</string>
    <string name="marker_name">Marker</string>
    <string name="limit_name">Limit</string>
    <string name="sweep_name">Sweep</string>
    <string name="freq_dist_name">Freq/Dist</string>
    <string name="calibration_name">Calibration</string>
    <string name="system_name">System</string>
    <string name="meas_short_name">Meas</string>
    <string name="freq_short_name">Freq</string>
    <string name="amp_short_name">Amp</string>
    <string name="limit_short_name">Limit</string>
    <string name="sweep_short_name">Sweep</string>
    <string name="freq_dist_short_name">Freq/Dist</string>
    <string name="cal_short_name">Cal</string>
    <string name="sys_short_name">Sys</string>
    <string name="start_name">Start</string>
    <string name="stop_name">Stop</string>
    <string name="back_name">Back</string>
    <string name="marker1_name">M1</string>
    <string name="marker2_name">M2</string>
    <string name="marker3_name">M3</string>
    <string name="marker4_name">M4</string>
    <string name="marker5_name">M5</string>
    <string name="screenshot_name">Screen Shot</string>
    <string name="save_name">Save</string>
    <string name="cancel_name">Cancel</string>
    <string name="calibration_comp">Complete Calibration</string>
    <string name="version_info_title">Version Information</string>
    <string name="exit_name">Exit</string>
    <string name="prop_velocity_dialog_title">Propagation Velocity</string>
    <string name="ok_name">OK</string>
    <string name="app_version_name">App Version</string>
    <string name="fw_version_name">FW Version</string>
    <string name="recall_name">Recall</string>
    <string name="name_name">Name</string>
    <string name="type_name">Type</string>
    <string name="size_name">Size (B)</string>
    <string name="modified_name">Modified</string>
    <string name="recall_off">Recall\nOff</string>
    <string name="recall_ok_cancel_message">Press \'OK\' button to continue recalling file or \'Cancel\' to cancel</string>
    <string name="cal_type">Cal Type</string>
    <string name="standard_name">Standard</string>
    <string name="flex_name">Flex</string>
    <string name="file_name">File Name</string>
    <string name="file_type">File Type</string>
    <string name="wifi_dialog_title">Available Network\'s SSID</string>
    <string name="apply_name">Apply</string>
    <string name="wifi_ap_name">PACT</string>
    <string name="preset_name">Preset</string>
    <string name="band_preset_name">Band Auto Configuration</string>
    <string name="wcdma_3g">3G\nWCDMA</string>
    <string name="lte_4g">4G\nLTE</string>
    <string name="nr_5g">5G\nNR</string>
    <string name="dl_2165">DL\n2165 MHz</string>
    <string name="ul_1975">UL\n1975 MHz</string>
    <string name="dl_995">DL\n995 MHz</string>
    <string name="ul_910">UL\n910 MHz</string>
    <string name="dl_1840">DL\n1840 MHz</string>
    <string name="ul_1745">UL\n1745 MHz</string>
    <string name="dl_1855">DL\n1855 MHz</string>
    <string name="ul_1760">UL\n1760 MHz</string>
    <string name="dl_2155">DL\n2155 MHz</string>
    <string name="ul_1965">UL\n1965 MHz</string>
    <string name="nr_3550">3550 MHz</string>
    <string name="cable_list_name">Cable List</string>
    <string name="cable_name">Cable Name : </string>
    <string name="prop_velocity_name">Prop Velocity : </string>
    <string name="cable_freq_name">Freq(MHz)</string>
    <string name="cable_loss_name">Loss(dB/m)</string>
    <string name="save_measure_menu">Measurement\n(.dat)</string>
    <string name="save_setup_menu">Setup\n(.stp)</string>
    <string name="save_screenshot_menu">Screen Shot\n(.png)</string>
    <string name="none_name">none</string>
    <string name="select_name">select</string>
    <string name="label_permissions">Please enable Microphone and Storage permissions.</string>
    <string name="fail_name">Fail</string>
    <string name="pass_name">Pass</string>
    <string name="warning_cal">Calibration Off</string>
    <string name="warning_message">Warning Message</string>
    <string name="low_battery_message">Low battery power</string>
    <string name="battery_level_10_message">Battery Level : 10%</string>
    <string name="battery_level_5_message">Battery Level : 5%</string>
    <string name="please_charge_message">Please charge the battery</string>
    <string name="fw_update_title">FW File List</string>
    <string name="calibration_step1">Step 1 of 3 :\n
\n
Connect OPEN to the RF Output Port or test port cable\n
\n
Press Measure button to complete this step.\n
\n
Calibration Steps :\n
   Step 1 : OPEN\n
   Step 2 : SHORT\n
   Step 3 : LOAD\n</string>
    <string name="calibration_step2">Step 2 of 3 :\n
\n
Connect SHORT to the RF Output Port or test port cable\n
\n
Press Measure button to complete this step.\n
\n
Calibration Steps :\n
   Step 1 : OPEN\n
   Step 2 : SHORT\n
   Step 3 : LOAD\n</string>
    <string name="calibration_step3">Step 3 of 3 :\n
\n
Connect LOAD to the RF Output Port or test port cable\n
\n
Press Measure button to complete this step.\n
\n
Calibration Steps :\n
   Step 1 : OPEN\n
   Step 2 : SHORT\n
   Step 3 : LOAD\n</string>
    <string name="span_name">Span</string>
    <string name="bw_name">BW</string>
    <string name="peak_name">Peak</string>
    <string name="trace_name">Trace</string>
    <string name="sweep_time_name">Sweep</string>
    <string name="meas_setup_name">Meas</string>
    <string name="mode_name">Mode</string>
    <string name="meas_name">Meas</string>
    <string name="full_span_name">Full Span</string>
    <string name="zero_span_name">Zero Span</string>
    <string name="last_span_name">Last Span</string>
    <string name="rbw_name">RBW</string>
    <string name="vbw_name">VBW</string>
    <string name="ref_level_name">Ref.Level</string>
    <string name="attenuator_name">Attenuator</string>
    <string name="clear_write_name">Clear Write</string>
    <string name="average_name">Average</string>
    <string name="max_hold_name">Max Hold</string>
    <string name="min_hold_name">Min Hold</string>
    <string name="update_name">Update</string>
    <string name="view_name">View</string>
    <string name="blank_name">Blank</string>
    <string name="normal_name">Normal</string>
    <string name="negative_name">Negative</string>
    <string name="sample_name">Sample</string>
    <string name="fixed_name">Fixed</string>
    <string name="off_name">Off</string>
    <string name="more_name">More</string>
    <string name="delta_name">Delta</string>
    <string name="select_marker_name">Select Marker</string>
    <string name="all_marker_off_name">All Marker Off</string>
    <string name="marker_table_name">Marker Table</string>
    <string name="maker_trace_name">Marker Trace</string>
    <string name="relative_to_name">Relative To</string>
    <string name="rms_name">RMS</string>
    <string name="dbm_unit">dBm</string>
    <string name="ref_label">Ref :</string>
    <string name="atten_label">Atten :</string>
    <string name="offset_label">Offset :</string>
    <string name="avg_hold_num_title">Avg/Hold Num</string>
    <string name="meas_setup">Meas Setup</string>
    <string name="integ_bw">Integ. BW</string>
    <string name="channel_power">Channel Power : </string>
    <string name="power_spectral_density">Power Spectral Density : </string>
    <string name="occupied_bandwidth">Occupied Bandwidth : </string>
    <string name="total_power">Total Power : </string>
    <string name="xdb_val">x dB : </string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="run">Run</string>
    <string name="hold">Hold</string>
    <string name="continuous">Cont</string>
    <string name="single">Single</string>
    <string name="flex">Flex</string>
    <string name="standard">Std</string>
    <string name="dtf_setup">DTF Setup</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="auto_scale">Auto scale</string>
    <string name="full_scale">Full scale</string>
    <string name="wrong_type">Wrong type</string>
    <string name="cable_list">Cable List</string>
    <string name="prop_velocity">Prop Velocity</string>
    <string name="windowing">Windowing</string>
    <string name="rectangular">Rectangular</string>
    <string name="normal_side_lobe">Nominal Side Lobe</string>
    <string name="low_side_lobe">Low Side Lobe</string>
    <string name="minimum_side_lobe">Minimum Side Lobe</string>
    <string name="sa_mode">SA Mode</string>
    <string name="marker_setup">Setup</string>
    <string name="marker_search">Search</string>
    <string name="limit_alram">Alarm</string>
    <string name="limit_pass_fail">Pass/Fail</string>
    <string name="limit_preset">Preset Limit</string>
    <string name="limit_type">Limit Type</string>
    <string name="limit_line">Limit Line</string>
    <string name="wait_cal">Please wait... Calibration is running...</string>
    <string name="profile">Profile</string>
    <string name="constellation_scale">Constellation Scale</string>
    <string name="guide_line">Guide Line</string>
    <string name="beam_pwr_ref">Beam Pwr Ref. Lvl</string>
    <string name="atten_mode">Attenuator Mode</string>
    <string name="preamp">Preamp</string>
    <string name="offset">Offset</string>
    <string name="ssb_only">SSB Only</string>
    <string name="ssb_info">SSB Info</string>
    <string name="ssb_locationn">SSB Location</string>
    <string name="config">Config</string>
    <string name="duplex">Duplex</string>
    <string name="scs">SCS</string>
    <string name="rb_offset">RB Offset</string>
    <string name="k_ssb">K_SSB</string>
    <string name="gscn">GSCN</string>
    <string name="no_data_mark">--.--</string>
    <string name="no_type_mark">--</string>
    <string name="standard_title">Standard</string>
    <string name="none">None</string>
    <string name="wcdma">WCDMA</string>
    <string name="lte">LTE</string>
    <string name="nr_5g_title">5G NR</string>
    <string name="carrier_setup">Carrier Setup</string>
    <string name="offset_setup">Offset Setup</string>
    <string name="carriers">Carriers</string>
    <string name="ref_carrier">Ref. Carrier</string>
    <string name="timing_offset">Timing Offset</string>
    <string name="nrs_index">Index</string>
    <string name="nrs_name">Name</string>
    <string name="nrs_freq">Freq\n[MHz]</string>
    <string name="nrs_ssb_freq">SSB Freq\n[MHz]</string>
    <string name="nrs_pci">PCI</string>
    <string name="nrs_ssb_index">SSB Index</string>
    <string name="nrs_ss_rsrp">SS-RSRP\n[dBm]</string>
    <string name="nrs_ss_rsrq">SS-RSRQ\n[dB]</string>
    <string name="nrs_ss_sinr">SS-SINR\n[dB]</string>
    <string name="nrs_timing_offset">Timing Offset\n[us]</string>
    <string name="nrs_tae">TAE\n[us]</string>
    <string name="nrs_not_value">--.--</string>
</resources>